fixed footer overflow on mobileLandscape

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -820,8 +820,8 @@ nav .logo img {
 }
 @media (min-width: 30em) and (max-width: 47.99em) {
   .footer__image-container {
-    width: 21rem;
-    height: 21rem;
+    width: 15rem;
+    height: 15rem;
   }
 }
 @media (min-width: 48em) {
